--- a/config/sync/field.field.node.movie.body.yml
+++ b/config/sync/field.field.node.movie.body.yml
@@ -18,6 +18,6 @@ translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
-  display_summary: false
-  required_summary: false
+  display_summary: true
+  required_summary: true
 field_type: text_with_summary
