--- a/config/sync/views.view.actors.yml
+++ b/config/sync/views.view.actors.yml
@@ -224,6 +224,15 @@ display:
             operator_list: {  }
       style:
         type: grid
+        options:
+          grouping: {  }
+          columns: 3
+          automatic_width: true
+          alignment: horizontal
+          row_class_custom: ''
+          row_class_default: true
+          col_class_custom: customcolum
+          col_class_default: true
       row:
         type: fields
       query:
